--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -1,45 +1,64 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/front}">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head><title layout:fragment="title">Connexion</title></head>
 <body>
-    <main layout:fragment="content">
-        <div class="page page-center">
-            <div class="container container-tight py-4">
-                <div class="card card-md">
-                    <div class="card-body">
-                        <h2 class="h2 text-center mb-4">Login to your account</h2>
-                        <form th:action="@{/users/login}" method="POST">
-                            <div class="mb-3">
-                                <label class="form-label">Username</label>
-                                <input name="username" type="text" class="form-control" autocomplete="off" />
+<main layout:fragment="content">
+    <link href="/assets/css/tabler.css" rel="stylesheet" />
+    <div class="page page-center">
+        <div class="container container-tight py-4">
+            <div class="card card-md">
+                <div class="card-body">
+                    <h2 class="h2 text-center mb-4">Login to your account</h2>
+                    <form th:action="@{/users/login}" method="POST" autocomplete="off" novalidate="">
+                        <div class="mb-3">
+                            <label class="form-label">Email address</label>
+                            <input type="text" name="username" class="form-control" autocomplete="off" />
+                        </div>
+                        <div class="mb-2">
+                            <label class="form-label">
+                                Password
+                                <span class="form-label-description">
+                                    <a href="#">Mot de passe oublié ?</a>
+                                </span>
+                            </label>
+                            <div class="input-group input-group-flat">
+                                <input type="password" name="password" class="form-control" autocomplete="off" />
+                                <span class="input-group-text">
+                                    <a href="#" class="link-secondary" data-bs-toggle="tooltip" aria-label="Show password" data-bs-original-title="Show password">
+                                        <!-- Download SVG icon from http://tabler.io/icons/icon/eye -->
+                                        <svg
+                                                xmlns="http://www.w3.org/2000/svg"
+                                                width="24"
+                                                height="24"
+                                                viewBox="0 0 24 24"
+                                                fill="none"
+                                                stroke="currentColor"
+                                                stroke-width="2"
+                                                stroke-linecap="round"
+                                                stroke-linejoin="round"
+                                                class="icon icon-1"
+                                        >
+                                            <path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0"></path>
+                                            <path d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6"></path>
+                                        </svg>
+                                    </a>
+                                </span>
                             </div>
-                            <div class="mb-2">
-                                <label class="form-label">
-                                    Password
-                                    <span class="form-label-description">
-                                        <a href="">I forgot password</a>
-                                    </span>
-                                </label>
-                                <div class="input-group input-group-flat">
-                                    <input type="password" name="password" class="form-control" placeholder="Your password" autocomplete="off" />
-                                </div>
-                            </div>
-                            <div class="mb-2">
-                                <label class="form-check">
-                                    <input type="checkbox" class="form-check-input" />
-                                    <span class="form-check-label">Remember me on this device</span>
-                                </label>
-                            </div>
-                            <div class="form-footer">
-                                <button type="submit" class="btn btn-primary w-100">Sign in</button>
-                            </div>
-                        </form>
-                    </div>
-
+                        </div>
+                        <div class="mb-2">
+                            <label class="form-check">
+                                <input type="checkbox" class="form-check-input" />
+                                <span class="form-check-label">Remember me on this device</span>
+                            </label>
+                        </div>
+                        <div class="form-footer">
+                            <button type="submit" class="btn btn-primary w-100">Sign in</button>
+                        </div>
+                    </form>
                 </div>
-                <div class="text-center text-secondary mt-3">Don't have account yet? <a href="/users/register" tabindex="-1">Sign up</a></div>
             </div>
         </div>
-    </main>
+    </div>
+</main>
 </body>
 </html>
