--- a/src/main/resources/templates/admin/pages/list.html
+++ b/src/main/resources/templates/admin/pages/list.html
@@ -22,9 +22,6 @@
                             <thead>
                             <tr>
                                 <th>
-                                    <button class="table-sort d-flex justify-content-between" data-sort="sort-name"><strong>#</strong></button>
-                                </th>
-                                <th>
                                     <button class="table-sort d-flex justify-content-between" data-sort="sort-city">Title</button>
                                 </th>
                                 <th>
@@ -35,50 +32,26 @@
                             </tr>
                             </thead>
                             <tbody class="table-tbody">
-                            <tr>
-                                <td class="sort-name">
-                                    <span>1</span>
-                                </td>
+                            <tr th:each="page : ${pages}">
                                 <td class="sort-city">
-                                    <span>Home</span>
+                                    <span th:text="${page}">default-content</span>
                                 </td>
                                 <td class="sort-tags">
                                     <div class="badges-list">
-                                        <a class="badge" th:href="@{/}">/</a>
+                                        <a class="badge" th:href="${'/' + page}"><span th:text="${'/' + page}">default-content</span></a>
                                     </div>
                                 </td>
                                 <td class="text-end">
                                     <div class="dropdown">
                                         <button class="btn dropdown-toggle align-text-top" data-bs-toggle="dropdown">Actions</button>
                                         <div class="dropdown-menu dropdown-menu-end">
-                                            <a class="dropdown-item" th:href="@{/admin/pages/edit/home}">Edit</a>
+                                            <a class="dropdown-item" th:href="${'/admin/pages/edit/' + page}">Edit</a>
                                             <button disabled class="dropdown-item">Delete</button>
                                         </div>
                                     </div>
                                 </td>
                             </tr>
-                            <tr>
-                                <td class="sort-name">
-                                    <span>2</span>
-                                </td>
-                                <td class="sort-city">
-                                    <span>Projects</span>
-                                </td>
-                                <td class="sort-tags">
-                                    <div class="badges-list">
-                                        <a class="badge" th:href="@{/projects}">/projects</a>
-                                    </div>
-                                </td>
-                                <td class="text-end">
-                                    <div class="dropdown">
-                                        <button class="btn dropdown-toggle align-text-top" data-bs-toggle="dropdown">Actions</button>
-                                        <div class="dropdown-menu dropdown-menu-end">
-                                            <a class="dropdown-item" th:href="@{/admin/pages/edit/projects}">Edit</a>
-                                            <button disabled class="dropdown-item">Delete</button>
-                                        </div>
-                                    </div>
-                                </td>
-                            </tr>
+
                             </tbody>
                         </table>
                     </div>
